                    ----------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

05-11-14 I. Hrivnacova (AnaEx01-V10-00-04)
- Including shared directory directly in the example
  to avoid out-of-project sources
  - based on analysisShared-V10-00-00 
- Adding utility scripts for GNUmake build (much simpler replacement
  for scripts from common) \
  - basen on analysisScripts-V10-00-00 
- Moved implementation of G4AnalysisManager for hbook from 
  extended/common/analysis in hbook sub-directory  

13-08-14 mma (AnaEx01-V10-00-03)
- update Readme and .Readme again

12-08-14 mma (AnaEx01-V10-00-02)
- restaure calorimeter drawing in Readme and .Readme 

17-06-14 I. Hrivnacova (AnaEx01-V10-00-01)
- Fixed problems reported by Davide Mancusi:
  - Moving tools/hbook/*.f files in examples/extended/common/analysis/src 
    to avoid their retrieval from Geant4 source/includes which causes problem 
    when building examples against Geant4 build directory. 
  - Added -lkernlib in list of libraries (required with Debian cernlib 
    distribution 20061220)
- In CMake build: replaced explicit use of gfortran with 
  enable_language(Fortran) and using fortran_sources variable in analogous 
  way as sources

11-06-14 I. Hrivnacova (AnaEx01-V10-00-00)
- Fixed path to copy_files.sh, clean_files.sh in GNUmalefile
  (this makes GNUmake build working with Geant4 installation via
   CMake)
- Fixed SharedFilesList.txt - removed PhysicList class
- Fixed path to hbook *.f files in GNUmakefile.tools_hbook

28-05-14 I. Hrivnacova
- Use Geant4 physics list (FTFP_BERT) in AnaEx01,02,03, 
  removed PhysicList class from shared
  (tag in examples/analysis)
    