@@ -115,3 +115,17 @@ $Id$
     CERNLIB = path to the CERNLIB installation
  
  Then, *before* compiling, activate g4hbook.hh in HistoManager.hh
+
+ 6- How to build
+ --------------- 
+
+ An additional step is needed when building the example with GNUmake
+ due to using the extra shared directory: 
+  % cd path_to_AnaEx01/AnaEx01
+  % gmake setup
+  % gmake
+
+ This will copy the files from shared in the example include and src;
+ to remove these files:
+  % gmake clean_setup
+ 
