@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+06-11-14 I. Hrivnacova (analysisShared-V10-00-01)
+- Moved scripts from upper directory in shared
      
 05-11-14 I. Hrivnacova (analysisShared-V10-00-00)
 - Tagged version which will be included in AnaEx0N examples
